--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@kanpou0108/tiny",
   "version": "1.0.0",
-  "description": "",
+  "description": "Removes all spaces from a string",
+  "license": "MIT",
+  "repository": "kanpou0108/tiny",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "tiny",
+    "npm",
+    "package",
+    "bamblehorse"
+  ]
 }
